--- a/layout_parts/q1/css/style.css
+++ b/layout_parts/q1/css/style.css
@@ -1,5 +1,40 @@
 @charset "UTF-8";
 
 /* 回答はここに書いてね */
+.clearfix:after {
+  display: block;
+  content: "";
+  clear: both;
+}
+
+.q1-content {
+  margin: 0 auto;
+  width: 900px;
+  background-color: #eff3f4;
+  padding: 20px
+}
+
+.blue {
+  float: left;
+  margin-left: 20px;
+  padding: 20px;
+  width: 230px;
+  background-color: #3274ae;
+}
+
+.blue:first-child {
+  margin-left: 0;
+}
+
+.white-content {
+  padding: 20px;
+  border: 10px solid #022336;
+  background-color: #eaf4ff;
+}
+
+.blue-contents {
+  font-size: 16px;
+
+}
 
 /* 回答はここに書いてね */
