--- a/layout_parts/q2/css/style.css
+++ b/layout_parts/q2/css/style.css
@@ -2,4 +2,37 @@
 
 /* 回答はここに書いてね */
 
+.clearfix:after {
+  display: block;
+  content: "";
+  clear: both;
+}
+
+.q2-content {
+  margin: 0 auto;
+  width: 900px;
+  background-color: #eff3f4;
+  padding: 20px;
+}
+
+.main-content_left {
+  float: left;
+  margin-right: 20px;
+}
+
+.main-content_right {
+  float: right;
+  margin-left: 20px;
+}
+
+.q2-text {
+  font-size: 18px;
+  line-height: 22px;
+  word-break: break-all;
+}
+
+
+
+
+
 /* 回答はここに書いてね */
