--- a/layout_parts/q5/css/style.css
+++ b/layout_parts/q5/css/style.css
@@ -24,15 +24,63 @@
   width: 100px;
   text-align: center;
 }
+.text1 {
+  z-index: 1;
+  top: 40px;
+  left: 200px;
+  background-color: #ffefd3;
+}
 
-.box-q5.text8 {
+.text2 {
+  z-index: 2;
+  top: 120px;
+  left: 280px;
+  background-color: #7084de;
+}
+
+.text3 {
+  z-index: 3;
+  top: 200px;
+  left: 360px;
+  background-color: #d0ecea;
+}
+
+.text4 {
+  z-index: 4;
+  top: 280px;
+  left: 280px;
+  background-color: #8b7a5e;
+}
+
+.text5 {
+  z-index: 5;
+  top: 360px;
+  left: 200px;
+  background-color: #9fd6d2;
+}
+
+.text6 {
+  z-index: 6;
+  top: 280px;
+  left: 120px;
+  background-color: #fffee4;
+}
+
+.text7 {
+  z-index: 7;
+  top: 200px;
+  left: 40px;
+  background-color: #deae70;
+}
+
+.text8 {
   z-index: 8;
   top: 120px;
   left: 120px;
   background-color: #de70cf;
 }
 
-.box-q5.text8::after {
+.text8::after {
   position: absolute;
   top: 0;
   right: 0;
@@ -42,56 +90,7 @@
   content: "";
 }
 
-.box-q5.text1 {
-  z-index: 1;
-  top: 40px;
-  left: 200px;
-  background-color: #ffefd3;
-}
-
-.box-q5.text2 {
-  z-index: 2;
-  top: 120px;
-  left: 280px;
-  background-color: #7084de;
-}
-
-.box-q5.text3 {
-  z-index: 3;
-  top: 200px;
-  left: 360px;
-  background-color: #d0ecea;
-}
-
-.box-q5.text4 {
-  z-index: 4;
-  top: 280px;
-  left: 280px;
-  background-color: #8b7a5e;
-}
-
-.box-q5.text5 {
-  z-index: 5;
-  top: 360px;
-  left: 200px;
-  background-color: #9fd6d2;
-}
-
-.box-q5.text6 {
-  z-index: 6;
-  top: 280px;
-  left: 120px;
-  background-color: #fffee4;
-}
-
-.box-q5.text7 {
-  z-index: 7;
-  top: 200px;
-  left: 40px;
-  background-color: #deae70;
-}
-
-.box-q5.text9 {
+.text9 {
   z-index: 9;
   position: fixed;
   top: 10px;
