--- a/layout_parts/q7/css/style.css
+++ b/layout_parts/q7/css/style.css
@@ -1,5 +1,67 @@
 @charset "UTF-8";
 
 /* 回答はここに書いてね */
+.clearfix:after {
+  display: block;
+  content: "";
+  clear: both;
+}
+
+.q7textbox {
+  width: 225px;
+  font-size: 16px;
+  box-sizing: border-box;
+}
+
+.q7float {
+  float: left;
+  margin-left: 50px;
+}
+
+.q7float:first-child {
+  margin-left: 0;
+}
+
+.innertable {
+  display: table;
+}
+
+.table {
+  display: table-cell;
+  vertical-align: middle;
+  padding-left: 50px;
+}
+
+.table:first-child {
+  padding-left: 0;
+}
+
+.q7inlineblock {
+  display: inline-block;
+  vertical-align: middle;
+  width:225px;
+  box-sizing: border-box;
+}
+
+.q7flex {
+  display: flex;
+  align-items: flex-end;
+  justify-content: space-around;
+}
+
+.q7flexible {
+  display: inline-block;
+  width: 100%;
+  margin-left: -300px;
+  padding-left: 350px;
+  box-sizing: border-box;
+}
+
+.q7fixed {
+  display: inline-block;
+  width: 300px;
+}
+
+
 
 /* 回答はここに書いてね */
