--- a/layout_parts/q9/css/style.css
+++ b/layout_parts/q9/css/style.css
@@ -1,5 +1,41 @@
 @charset "UTF-8";
 
 /* 回答はここに書いてね */
+.balloon {
+  position: relative;
+  width: 500px;
+  padding: 20px;
+  margin: 0 auto;
+  border-radius: 30px;
+  border: solid 5px #222;
+}
+
+.balloontext {
+  font-size: 16px;
+}
+
+.balloon:before,.balloon:after {
+  content:"";
+  position: absolute;
+  right: 0;
+  left: 0;
+  width: 0;
+  height:0;
+  margin: 0;
+  border: 20px solid
+}
+
+.balloon:before {
+  bottom: -45px;
+  left: 30px;
+  border-top-color: #222;
+}
+
+.balloon:after {
+  bottom: -38px;
+  left: 30px;
+  border-top-color: #fff;
+}
+
 
 /* 回答はここに書いてね */
