--- a/layout_parts/q8/css/style.css
+++ b/layout_parts/q8/css/style.css
@@ -2,4 +2,62 @@
 
 /* 回答はここに書いてね */
 
+.q8__transition {
+  margin: 0 auto;
+  position: relative;
+  width: 500px;
+  height: 333px;
+  overflow: hidden;
+}
+
+.q8__transition:hover .q8__img {
+  transform: scale(1.5); 
+}
+
+.q8__transition .q8__img {
+  transition-duration: 0.5s;
+}
+
+.q8__text {
+  transition: all 0.5s;
+  box-sizing: border-box;
+  position: absolute;
+  line-height: 16px;
+  font-size: 16px;
+  width: 100%;
+  height: 100%;
+  color: #fff;
+  background: linear-gradient(rgba(0,0,0,0) 10%, rgba(0,0,0,0.8));
+  bottom:-100%;
+  left: 0;
+}
+
+.q8__transition:hover .q8__text {
+  bottom:0;
+  left:0;
+} 
+
+.q8__text__child {
+  transition-duration: 0.5s;
+  position: absolute;
+  bottom:0;
+  left:0;
+  padding: 20px;
+}
+
+.q8__animation {
+  margin: 0 auto;
+  width:100px;
+  height: 100px;
+  border: solid 10px #ecf1f2;
+  border-radius: 50%;
+  border-top-color: #00bcd4;
+  animation: q8--animation 1.1s  infinite linear;
+}
+
+@keyframes q8--animation {
+  0% {transform: rotate(0)}
+  100% {transform: rotate(360deg)}
+}
+
 /* 回答はここに書いてね */
